--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.20.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "next": "14.0.3",
+    "next-sanity": "^5.5.10",
     "next-themes": "^0.2.1",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.4",
+    "react-simply-carousel": "^9.0.5",
+    "sanity": "^3.20.0",
+    "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
